Datasets is merged using the standardized column name

--- a/Notebook/main.ipynb
+++ b/Notebook/main.ipynb
@@ -832,6 +832,296 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Print Column Names for Comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column names in data_2018:\n",
+      "Index(['Company Name', 'Industry', 'Round/Series', 'Amount', 'Location',\n",
+      "       'About Company'],\n",
+      "      dtype='object')\n",
+      "\n",
+      "\n",
+      "Column names in data_2019:\n",
+      "Index(['Company/Brand', 'Founded', 'HeadQuarter', 'Sector', 'What it does',\n",
+      "       'Founders', 'Investor', 'Amount($)', 'Stage'],\n",
+      "      dtype='object')\n",
+      "\n",
+      "\n",
+      "Column names in data_2020:\n",
+      "Index(['Company_Brand', 'Founded', 'HeadQuarter', 'Sector', 'What_it_does',\n",
+      "       'Founders', 'Investor', 'Amount', 'Stage', 'column10'],\n",
+      "      dtype='object')\n",
+      "\n",
+      "\n",
+      "Column names in data_2021:\n",
+      "Index(['Company_Brand', 'Founded', 'HeadQuarter', 'Sector', 'What_it_does',\n",
+      "       'Founders', 'Investor', 'Amount', 'Stage'],\n",
+      "      dtype='object')\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print column names for comparison\n",
+    "print(\"Column names in data_2018:\")\n",
+    "print(data_2018.columns)\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# Column names for data_2019\n",
+    "print(\"Column names in data_2019:\")\n",
+    "print(data_2019.columns)\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# Column names for data_2020\n",
+    "print(\"Column names in data_2020:\")\n",
+    "print(data_2020.columns)\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "# Column names for data_2021\n",
+    "print(\"Column names in data_2021:\")\n",
+    "print(data_2021.columns)\n",
+    "print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observations\n",
+    "1. **Inconsistency in Column Names**\n",
+    "2018 dataset has different column names compared to the rest of the datasets.\n",
+    "\n",
+    "2. **Variations in Column Names**\n",
+    "The same type of information is represented by different column names across years (e.g., 'Company Name', 'Company/Brand', 'Company_Brand').\n",
+    "\n",
+    "3. **Unique Columns**\n",
+    "Some years have unique columns not present in other years, which may complicate direct merging.\n",
+    "\n",
+    "*This will be addressed by Standardizing column names across all datasets, align similar columns to a standard name for consistency and unique columns based on their importance and relevance will be handled while irrelevant columns will be dropped.*\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Column renaming for consistency and merging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>company_name</th>\n",
+       "      <th>sector</th>\n",
+       "      <th>stage</th>\n",
+       "      <th>funding_amount</th>\n",
+       "      <th>location</th>\n",
+       "      <th>description</th>\n",
+       "      <th>Founded</th>\n",
+       "      <th>Founders</th>\n",
+       "      <th>Investor</th>\n",
+       "      <th>Stage</th>\n",
+       "      <th>HeadQuarter</th>\n",
+       "      <th>Sector</th>\n",
+       "      <th>column10</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>TheCollegeFever</td>\n",
+       "      <td>Brand Marketing, Event Promotion, Marketing, S...</td>\n",
+       "      <td>Seed</td>\n",
+       "      <td>250000</td>\n",
+       "      <td>Bangalore, Karnataka, India</td>\n",
+       "      <td>TheCollegeFever is a hub for fun, fiesta and f...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Happy Cow Dairy</td>\n",
+       "      <td>Agriculture, Farming</td>\n",
+       "      <td>Seed</td>\n",
+       "      <td>₹40,000,000</td>\n",
+       "      <td>Mumbai, Maharashtra, India</td>\n",
+       "      <td>A startup which aggregates milk from dairy far...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>MyLoanCare</td>\n",
+       "      <td>Credit, Financial Services, Lending, Marketplace</td>\n",
+       "      <td>Series A</td>\n",
+       "      <td>₹65,000,000</td>\n",
+       "      <td>Gurgaon, Haryana, India</td>\n",
+       "      <td>Leading Online Loans Marketplace in India</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>PayMe India</td>\n",
+       "      <td>Financial Services, FinTech</td>\n",
+       "      <td>Angel</td>\n",
+       "      <td>2000000</td>\n",
+       "      <td>Noida, Uttar Pradesh, India</td>\n",
+       "      <td>PayMe India is an innovative FinTech organizat...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Eunimart</td>\n",
+       "      <td>E-Commerce Platforms, Retail, SaaS</td>\n",
+       "      <td>Seed</td>\n",
+       "      <td>—</td>\n",
+       "      <td>Hyderabad, Andhra Pradesh, India</td>\n",
+       "      <td>Eunimart is a one stop solution for merchants ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      company_name                                             sector  \\\n",
+       "0  TheCollegeFever  Brand Marketing, Event Promotion, Marketing, S...   \n",
+       "1  Happy Cow Dairy                               Agriculture, Farming   \n",
+       "2       MyLoanCare   Credit, Financial Services, Lending, Marketplace   \n",
+       "3      PayMe India                        Financial Services, FinTech   \n",
+       "4         Eunimart                 E-Commerce Platforms, Retail, SaaS   \n",
+       "\n",
+       "      stage funding_amount                          location  \\\n",
+       "0      Seed         250000       Bangalore, Karnataka, India   \n",
+       "1      Seed    ₹40,000,000        Mumbai, Maharashtra, India   \n",
+       "2  Series A    ₹65,000,000           Gurgaon, Haryana, India   \n",
+       "3     Angel        2000000       Noida, Uttar Pradesh, India   \n",
+       "4      Seed              —  Hyderabad, Andhra Pradesh, India   \n",
+       "\n",
+       "                                         description  Founded Founders  \\\n",
+       "0  TheCollegeFever is a hub for fun, fiesta and f...      NaN      NaN   \n",
+       "1  A startup which aggregates milk from dairy far...      NaN      NaN   \n",
+       "2          Leading Online Loans Marketplace in India      NaN      NaN   \n",
+       "3  PayMe India is an innovative FinTech organizat...      NaN      NaN   \n",
+       "4  Eunimart is a one stop solution for merchants ...      NaN      NaN   \n",
+       "\n",
+       "  Investor Stage HeadQuarter Sector column10  \n",
+       "0      NaN   NaN         NaN    NaN      NaN  \n",
+       "1      NaN   NaN         NaN    NaN      NaN  \n",
+       "2      NaN   NaN         NaN    NaN      NaN  \n",
+       "3      NaN   NaN         NaN    NaN      NaN  \n",
+       "4      NaN   NaN         NaN    NaN      NaN  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Rename columns in each dataset\n",
+    "data_2018.rename(columns={\n",
+    "    'Company Name': 'company_name',\n",
+    "    'Industry': 'sector',\n",
+    "    'Round/Series': 'stage',\n",
+    "    'Amount': 'funding_amount',\n",
+    "    'Location': 'location',\n",
+    "    'About Company': 'description'\n",
+    "}, inplace=True)\n",
+    "\n",
+    "# 2019 column mapping\n",
+    "data_2019.rename(columns={\n",
+    "    'Company/Brand': 'company_name',\n",
+    "    'HeadQuarter': 'location',\n",
+    "    'Sector': 'sector',\n",
+    "    'What it does': 'description',\n",
+    "    'Amount($)': 'funding_amount'\n",
+    "}, inplace=True)\n",
+    "\n",
+    "# 2020 column mapping\n",
+    "data_2020.rename(columns={\n",
+    "    'Company_Brand': 'company_name',\n",
+    "    'What_it_does': 'description',\n",
+    "    'Amount': 'funding_amount'\n",
+    "}, inplace=True)\n",
+    "\n",
+    "# 2021 column mapping\n",
+    "data_2021.rename(columns={\n",
+    "    'Company_Brand': 'company_name',\n",
+    "    'What_it_does': 'description',\n",
+    "    'Amount': 'funding_amount'\n",
+    "}, inplace=True)\n",
+    "\n",
+    "# Merge datasets using the standardized column names\n",
+    "merged_data = pd.concat([data_2018, data_2019, data_2020, data_2021], ignore_index=True)\n",
+    "\n",
+    "merged_data.head(5)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
